--- a/src/main/resources/templates/empleados/nuevoEmpleado.html
+++ b/src/main/resources/templates/empleados/nuevoEmpleado.html
@@ -18,7 +18,7 @@
         <input type="text" th:field="*{apellidoMaterno}" placeholder="Apellido Materno Empleado" class="form-control mb-4 col-4">
         <input type="text" th:field="*{direccion}" placeholder="Dirección" class="form-control mb-4 col-4">
         <input type="text" th:field="*{salario}" placeholder="Salario Empleado" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{fechaIngreso}" placeholder="Fecha ingreso Empleado" class="form-control mb-4 col-4">
+        <input type="date" th:field="*{fechaIngreso}" placeholder="Fecha ingreso Empleado" class="form-control mb-4 col-4">
         <button type="submit" class="btn btn-info col-2"> Guardar </button>
     </form>
     <hr>
