--- a/src/main/resources/templates/empleados/nuevoEmpleado.html
+++ b/src/main/resources/templates/empleados/nuevoEmpleado.html
@@ -1,22 +1,23 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Administracion de Empleados</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>Nuevo Empleado</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
 
 <div class="container">
-    <h1>Administración de empleados</h1>
+    <h1> Administración de empleados </h1>
     <hr>
-    <h2>Nuevo empleado</h2>
+    <h2> Nuevo Empleado</h2>
 
-    <form action="#" th:action="@{/guardarEmpleado}" th:object="${empleado}" method="post">
+    <form action="#" th:action="@{/guardarEmpleado}"   th:object="${empleado}" method="post">
+
         <input type="text" th:field="*{nombre}" placeholder="Nombres Empleado" class="form-control mb-4 col-4">
         <input type="text" th:field="*{apellidoPaterno}" placeholder="Apellido Paterno Empleado" class="form-control mb-4 col-4">
         <input type="text" th:field="*{apellidoMaterno}" placeholder="Apellido Materno Empleado" class="form-control mb-4 col-4">
-        <input type="text" th:field="*{direccion}" placeholder="Dirección" class="form-control mb-4 col-4">
+        <input type="text" th:field="*{direccion}" placeholder="Direccón" class="form-control mb-4 col-4">
         <input type="text" th:field="*{salario}" placeholder="Salario Empleado" class="form-control mb-4 col-4">
         <input type="date" th:field="*{fechaIngreso}" placeholder="Fecha ingreso Empleado" class="form-control mb-4 col-4">
         <button type="submit" class="btn btn-info col-2"> Guardar </button>
