--- a/src/main/resources/templates/vacaciones/vacaciones.html
+++ b/src/main/resources/templates/vacaciones/vacaciones.html
@@ -2,45 +2,40 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Nueva Vacación</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>Administración de Vacaciones</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
-    <h1>Administración de Vacaciones</h1>
-    <hr>
-    <h2>Nueva Vacación</h2>
+<div class="container my-2">
+    <h1>Listado de Vacaciones</h1>
+    <a th:href="@{/nuevaVacacion}" class="btn btn-primary btn-sm mb-3">Agregar Vacación</a>
+    <a th:href="@{/buscarVacaciones}" class="btn btn-info btn-sm mb-3">Buscar Vacaciones</a>
 
-    <form action="#" th:action="@{/guardarVacacion}" th:object="${vacacion}" method="post">
-
-        <label>Empleado:</label>
-        <select th:field="*{empleado}" class="form-control mb-4 col-4">
-            <option value="">-- Seleccione un Empleado --</option>
-            <option th:each="emp : ${listaEmpleados}"
-                    th:value="${emp.id}"
-                    th:text="${emp.getNombreCompleto()}"></option>
-        </select>
-
-        <label>Periodo (Ej: 2024):</label>
-        <input type="number" th:field="*{periodo}" placeholder="Periodo" class="form-control mb-4 col-4">
-
-        <label>Fecha Inicio:</label>
-        <input type="date" th:field="*{fechaInicio}" class="form-control mb-4 col-4">
-
-        <label>Fecha Fin:</label>
-        <input type="date" th:field="*{fechaFin}" class="form-control mb-4 col-4">
-
-        <label>Estado:</label>
-        <select th:field="*{estado}" class="form-control mb-4 col-4">
-            <option th:value="'0'" th:text="Programado"></option>
-            <option th:value="'1'" th:text="Tomado"></option>
-            <option th:value="'2'" th:text="Cancelado"></option>
-        </select>
-
-        <button type="submit" class="btn btn-info col-2">Guardar</button>
-    </form>
-    <hr>
-    <a th:href="@{/vacaciones}">Volver al Listado</a>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Empleado</th>
+            <th>Periodo</th>
+            <th>Fecha Inicio</th>
+            <th>Fecha Fin</th>
+            <th>Estado</th>
+            <th>Acción</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="vacacion : ${listaVacaciones}">
+            <td th:text="${vacacion.empleado.getNombreCompleto()}"></td>
+            <td th:text="${vacacion.periodo}"></td>
+            <td th:text="${#dates.format(vacacion.fechaInicio, 'dd/MM/yyyy')}"></td>
+            <td th:text="${#dates.format(vacacion.fechaFin, 'dd/MM/yyyy')}"></td>
+            <td th:text="${vacacion.getEstadoDescripcion()}"></td>
+            <td>
+                <a th:href="@{/actualizarVacacion/{id}(id=${vacacion.id})}" class="btn btn-primary">Actualizar</a>
+                <a th:href="@{/eliminarVacacion/{id}(id=${vacacion.id})}" class="btn btn-danger">Eliminar</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
